Add header markup

--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <title>Omnifood</title>
   </head>
   <body>
+    <header class="header">
+      <div class="container">
+        <div class="logo">
+          <img src="" alt="Omnifood logo">
+        </div>
+        <nav class="main-navigation">
+          <ul class="menu">
+            <li class="menu-item"><a href="#">Food delivery</a></li>
+            <li class="menu-item"><a href="#">How it works</a></li>
+            <li class="menu-item"><a href="#">Our cities</a></li>
+            <li class="menu-item"><a href="#">Sign up</a></li>
+          </ul>
+        </nav>
+        <div class="heading">
+          <h1>Goodbuy junk food!<br>
+            Hello super healthy meals</h1>
+          <button type="button" name="button">I'm hungry</button>
+          <button type="button" name="button">Show me more</button>
+        </div>
+      </div>
+    </header>
+
 
     <script src="js/script.js"></script>
   </body>
