--- a/index.html
+++ b/index.html
@@ -76,6 +76,32 @@
       </div>
     </section>
 
+    <div class="food-photos">
+      <figure class="meal-img">
+        <img src="" alt="Korean bibimbap with egg and vegetables">
+      </figure>
+      <figure class="meal-img">
+        <img src="" alt="Simple italian pizza with cherry tomatoes">
+      </figure>
+      <figure class="meal-img">
+        <img src="" alt="Chicken breast steak with vegetables">
+      </figure>
+      <figure class="meal-img">
+        <img src="" alt="Autumn pumpkin soup">
+      </figure>
+      <figure class="meal-img">
+        <img src="" alt="Paleo beef steak with vegetables">
+      </figure>
+      <figure class="meal-img">
+        <img src="" alt="Healthy baguette with egg and vegetables">
+      </figure>
+      <figure class="meal-img">
+        <img src="" alt="Burger with cheddar and bacon">
+      </figure>
+      <figure class="meal-img">
+        <img src="" alt="Granola with cherries and strawberries">
+      </figure>
+    </div>
 
     <script src="js/script.js"></script>
   </body>
