Add 'How it works' section markup

--- a/index.html
+++ b/index.html
@@ -103,6 +103,22 @@
       </figure>
     </div>
 
+    <section class="steps">
+      <div class="title">
+        <h2>How it works - simple as 1, 2, 3</h2>
+      </div>
+      <div class="iphone-img">
+        <img src="" alt="Mobile app screenshot">
+      </div>
+      <div class="step-list">
+        <ul>
+          <li class="step"><span>1</span> Choose the subscription plan that best fits your needs and sign up today</li>
+          <li class="step"><span>2</span> Order your delicious meal using our mobile app or website. Or you can even call us!</li>
+          <li class="step"><span>3</span> Enjoy your meal after less than 20 minutes. See you the next time!</li>
+        </ul>
+      </div>
+    </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
