--- a/index.html
+++ b/index.html
@@ -119,6 +119,40 @@
       </div>
     </section>
 
+    <section class="cities">
+      <div class="title">
+        <h2>We're currently in these cities</h2>
+      </div>
+      <div class="city">
+
+        <h3>Lisbon</h3>
+        <div class="city-description"><i></i> 1600+ happy eaters</div>
+        <div class="city-description"><i></i> 60+ top chefs</div>
+        <div class="city-description"><i></i><a href="#"> @omnifood_lx</a></div>
+      </div>
+      <div class="city">
+
+        <h3>San Francisco</h3>
+        <div class="city-description"><i></i> 3700+ happy eaters</div>
+        <div class="city-description"><i></i> 160+ top chefs</div>
+        <div class="city-description"><i></i><a href="#"> @omnifood_sf</a></div>
+      </div>
+      <div class="city">
+
+        <h3>Berlin</h3>
+        <div class="city-description"><i></i> 2300+ happy eaters</div>
+        <div class="city-description"><i></i> 110+ top chefs</div>
+        <div class="city-description"><i></i><a href="#"> @omnifood_berlin</a></div>
+      </div>
+      <div class="city">
+
+        <h3>London</h3>
+        <div class="city-description"><i></i> 1200+ happy eaters</div>
+        <div class="city-description"><i></i> 50+ top chefs</div>
+        <div class="city-description"><i></i><a href="#"> @omnifood_london</a></div>
+      </div>
+    </section>
+
     <script src="js/script.js"></script>
   </body>
 </html>
