--- a/index.html
+++ b/index.html
@@ -153,6 +153,38 @@
       </div>
     </section>
 
+    <section class="testimonials">
+      <div class="title">
+        <h2>Our customers can't live without us</h2>
+      </div>
+      <div class="review">
+        <p>
+          Omnifood is just awesome! I just launched a startup which leaves
+          me with no time for cooking, so Omnifood is a life-saver. Now
+          that I got used to it, I couldn't live without my daily meals!
+        </p>
+        <img src="" alt="Customer photo">
+        <span class="reviewer">Alberto Duncan</span>
+      </div>
+      <div class="review">
+        <p>
+          Inexpensive, healthy and great-tasting meals, delivered right to
+          my home. We have lots of food delivery here in Lisbon, but no one
+          comes even close to Omifood. Me and my family are so in love!
+        </p>
+        <img src="" alt="Customer photo">
+        <span class="reviewer">Joana Silva</span>
+      </div>
+      <div class="review">
+        <p>
+          I was looking for a quick and easy food delivery service in 
+          San Franciso. I tried a lot of them and ended up with Omnifood.
+          Best food delivery service in the Bay Area. Keep up the great work!
+        </p>
+        <img src="" alt="Customer photo">
+        <span class="reviewer">Milton Chapman</span>
+      </div>
+    </section>
     <script src="js/script.js"></script>
   </body>
 </html>
