--- a/index.html
+++ b/index.html
@@ -177,12 +177,54 @@
       </div>
       <div class="review">
         <p>
-          I was looking for a quick and easy food delivery service in 
+          I was looking for a quick and easy food delivery service in
           San Franciso. I tried a lot of them and ended up with Omnifood.
           Best food delivery service in the Bay Area. Keep up the great work!
         </p>
         <img src="" alt="Customer photo">
         <span class="reviewer">Milton Chapman</span>
+      </div>
+    </section>
+
+    <section class="">
+      <div class="title">
+        <h2>Start eating healthy today</h2>
+      </div>
+      <div class="price-plan">
+        <h3>Premium</h3>
+        <p>399$ <span>/month</span></p>
+        <p>That's only 13.30$ per meal</p>
+        <div class="price-description">
+          <div><i></i> 1 meal every day</div>
+          <div><i></i> Order 24/7</div>
+          <div><i></i> Access to newest creations</div>
+          <div><i></i> Free delivery</div>
+          <button type="button" name="button">Sign up</button>
+        </div>
+      </div>
+      <div class="price-plan">
+        <h3>Pro</h3>
+        <p>149$ <span>/month</span></p>
+        <p>That's only 14.90$ per meal</p>
+        <div class="price-description">
+          <div><i></i> 1 meal 10 days/month</div>
+          <div><i></i> Order 24/7</div>
+          <div><i></i> Access to newest creations</div>
+          <div><i></i> Free delivery</div>
+          <button type="button" name="button">Sign up</button>
+        </div>
+      </div>
+      <div class="price-plan">
+        <h3>Starter</h3>
+        <p>19$ <span>/meal</span></p>
+        <p></p>
+        <div class="price-description">
+          <div><i></i> 1 meal</div>
+          <div><i></i> Order from 8 am to 12 pm</div>
+          <div><i></i> </div>
+          <div><i></i> Free delivery</div>
+          <button type="button" name="button">Sign up</button>
+        </div>
       </div>
     </section>
     <script src="js/script.js"></script>
