--- a/index.html
+++ b/index.html
@@ -227,6 +227,29 @@
         </div>
       </div>
     </section>
+
+    <section class="contacts">
+      <div class="title">
+        <h2>We're happy to hear from you</h2>
+      </div>
+      <div class="email-form">
+        <form class="" action="index.html" method="post">
+          <input type="text" name="" value="" placeholder="Your name" required>
+          <input type="email" name="" value="" placeholder="Your email" required>
+          <select class="" name="">
+            <option value="">How did you find us?</option>
+            <option value="">Friends</option>
+            <option value="">Search engine</option>
+            <option value="">Advertisement</option>
+            <option value="">Other</option>
+          </select>
+          <label for="news"> Newsletter?</label>
+          <input id="news" type="checkbox" name="" value="" checked>
+          <textarea name="message" placeholder="Drop us a line"></textarea>
+          <button type="submit" name="button">Send it!</button>
+        </form>
+      </div>
+    </section>
     <script src="js/script.js"></script>
   </body>
 </html>
