--- a/index.html
+++ b/index.html
@@ -250,6 +250,28 @@
         </form>
       </div>
     </section>
+
+    <footer class="main-footer">
+      <div class="footer-nav">
+        <ul>
+          <li><a href="#"></a>About us</li>
+          <li><a href="#"></a>Blog</li>
+          <li><a href="#"></a>Press</li>
+          <li><a href="#"></a>iOS App</li>
+          <li><a href="#"></a>Android App</li>
+        </ul>
+      </div>
+      <div class="social-media">
+        <ul>
+          <li><a href="#"><i></i></a></li>
+          <li><a href="#"><i></i></a></li>
+          <li><a href="#"><i></i></a></li>
+          <li><a href="#"><i></i></a></li>
+        </ul>
+      </div>
+      <p>Copyright © 2015 by Omnifood. All rights reserved</p>
+    </footer>
+
     <script src="js/script.js"></script>
   </body>
 </html>
