Create a basic style for header

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Omnifood is a premium food delivery service with the mission
     to bring affordable and healthy meals to as many people as possible.">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <title>Omnifood</title>
   </head>
   <body>
     <header class="header">
       <div class="container">
-        <div class="logo">
-          <img src="" alt="Omnifood logo">
-        </div>
         <nav class="main-navigation">
+          <div class="logo">
+            <img src="img/logo-white.png" alt="Omnifood logo">
+          </div>
           <ul class="menu">
             <li class="menu-item"><a href="#">Food delivery</a></li>
             <li class="menu-item"><a href="#">How it works</a></li>
@@ -22,11 +23,12 @@
             <li class="menu-item"><a href="#">Sign up</a></li>
           </ul>
         </nav>
+
         <div class="heading">
           <h1>Goodbuy junk food!<br>
-            Hello super healthy meals</h1>
-          <button type="button" name="button">I'm hungry</button>
-          <button type="button" name="button">Show me more</button>
+            <span>Hello super healthy meals!</span></h1>
+          <button class="btn btn-full" type="button" name="button">I'm hungry</button>
+          <button class="btn btn-ghost" type="button" name="button">Show me more</button>
         </div>
       </div>
     </header>
