--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Omnifood is a premium food delivery service with the mission
     to bring affordable and healthy meals to as many people as possible.">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100|Lato:300,300i" rel="stylesheet">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Omnifood</title>
   </head>
@@ -33,51 +34,59 @@
       </div>
     </header>
 
-    <section class="features">
-      <div class="title">
-        <h2>Get food fast - not fast food</h2>
-      </div>
-      <div class="service-description">
-        <p>
-          Hello, we're Omnifood, your new premium food delivery service.
-          We know you're always busy. No time for cooking. So let us take
-          care of that, we're really good at it, we promise!
-        </p>
-      </div>
-      <div class="feature-description">
-        <h3>Up to 365 days/year</h3>
-        <p>
-          Never cook again! We really mean that. Our subscription plans
-          include up to 365 days/year coverage. You can also choose
-          to order more flexibly if that's your style.
-        </p>
-      </div>
-      <div class="feature-description">
-        <h3>Ready in 20 minutes</h3>
-        <p>
-          You're only twenty minutes away from your delicious and
-          super healthy meals delivered right to your home. We work
-          with the best chefs in each town to ensure that you're 100% happy.
-        </p>
-      </div>
-      <div class="feature-description">
-        <h3>100% organic</h3>
-        <p>
-          All our vegetables are fresh, organic and local. Animals are
-          raised without added hormones or antibiotics. Good for your
-          health, the environment, and it also tastes better!
-        </p>
-      </div>
-      <div class="feature-description">
-        <h3>Order anything</h3>
-        <p>
-          We don't limit your creativity, which means you can order
-          whatever you feel like. You can also choose from our menu
-          containing over 100 delicious meals. It's up to you!
-        </p>
+    <section class="about">
+      <div class="container">
+        <div class="title">
+          <h2>Get food fast &mdash; not fast food</h2>
+
+        </div>
+        <div class="service-description">
+          <p>
+            Hello, we're Omnifood, your new premium food delivery service.
+            We know you're always busy. No time for cooking. So let us take
+            care of that, we're really good at it, we promise!
+          </p>
+        </div>
+        <div class="features">
+          <div class="feature-description">
+            <i class="fa fa-calendar" aria-hidden="true"></i>
+            <h3>Up to 365 days/year</h3>
+            <p>
+              Never cook again! We really mean that. Our subscription plans
+              include up to 365 days/year coverage. You can also choose
+              to order more flexibly if that's your style.
+            </p>
+          </div>
+          <div class="feature-description">
+            <i class="fa fa-clock-o" aria-hidden="true"></i>
+            <h3>Ready in 20 minutes</h3>
+            <p>
+              You're only twenty minutes away from your delicious and
+              super healthy meals delivered right to your home. We work
+              with the best chefs in each town to ensure that you're 100% happy.
+            </p>
+          </div>
+          <div class="feature-description">
+            <i class="fa fa-cutlery" aria-hidden="true"></i>
+            <h3>100% organic</h3>
+            <p>
+              All our vegetables are fresh, organic and local. Animals are
+              raised without added hormones or antibiotics. Good for your
+              health, the environment, and it also tastes better!
+            </p>
+          </div>
+          <div class="feature-description">
+            <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
+            <h3>Order anything</h3>
+            <p>
+              We don't limit your creativity, which means you can order
+              whatever you feel like. You can also choose from our menu
+              containing over 100 delicious meals. It's up to you!
+            </p>
+          </div>
+        </div>
       </div>
     </section>
-
     <div class="food-photos">
       <figure class="meal-img">
         <img src="" alt="Korean bibimbap with egg and vegetables">
@@ -108,6 +117,7 @@
     <section class="steps">
       <div class="title">
         <h2>How it works - simple as 1, 2, 3</h2>
+
       </div>
       <div class="iphone-img">
         <img src="" alt="Mobile app screenshot">
@@ -124,6 +134,7 @@
     <section class="cities">
       <div class="title">
         <h2>We're currently in these cities</h2>
+
       </div>
       <div class="city">
 
@@ -158,6 +169,7 @@
     <section class="testimonials">
       <div class="title">
         <h2>Our customers can't live without us</h2>
+
       </div>
       <div class="review">
         <p>
@@ -191,6 +203,7 @@
     <section class="">
       <div class="title">
         <h2>Start eating healthy today</h2>
+
       </div>
       <div class="price-plan">
         <h3>Premium</h3>
@@ -233,6 +246,7 @@
     <section class="contacts">
       <div class="title">
         <h2>We're happy to hear from you</h2>
+
       </div>
       <div class="email-form">
         <form class="" action="index.html" method="post">
