--- a/index.html
+++ b/index.html
@@ -87,30 +87,31 @@
         </div>
       </div>
     </section>
+    
     <div class="food-photos">
       <figure class="meal-img">
-        <img src="" alt="Korean bibimbap with egg and vegetables">
+        <img src="img/1.jpg" alt="Korean bibimbap with egg and vegetables">
       </figure>
       <figure class="meal-img">
-        <img src="" alt="Simple italian pizza with cherry tomatoes">
+        <img src="img/2.jpg" alt="Simple italian pizza with cherry tomatoes">
       </figure>
       <figure class="meal-img">
-        <img src="" alt="Chicken breast steak with vegetables">
+        <img src="img/3.jpg" alt="Chicken breast steak with vegetables">
       </figure>
       <figure class="meal-img">
-        <img src="" alt="Autumn pumpkin soup">
+        <img src="img/4.jpg" alt="Autumn pumpkin soup">
       </figure>
       <figure class="meal-img">
-        <img src="" alt="Paleo beef steak with vegetables">
+        <img src="img/5.jpg" alt="Paleo beef steak with vegetables">
       </figure>
       <figure class="meal-img">
-        <img src="" alt="Healthy baguette with egg and vegetables">
+        <img src="img/6.jpg" alt="Healthy baguette with egg and vegetables">
       </figure>
       <figure class="meal-img">
-        <img src="" alt="Burger with cheddar and bacon">
+        <img src="img/7.jpg" alt="Burger with cheddar and bacon">
       </figure>
       <figure class="meal-img">
-        <img src="" alt="Granola with cherries and strawberries">
+        <img src="img/8.jpg" alt="Granola with cherries and strawberries">
       </figure>
     </div>
 
