Add style to 'How it works' section

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
       </div>
     </section>
-    
+
     <div class="food-photos">
       <figure class="meal-img">
         <img src="img/1.jpg" alt="Korean bibimbap with egg and vegetables">
@@ -116,26 +116,28 @@
     </div>
 
     <section class="steps">
-      <div class="title">
-        <h2>How it works - simple as 1, 2, 3</h2>
-
-      </div>
-      <div class="iphone-img">
-        <img src="" alt="Mobile app screenshot">
-      </div>
-      <div class="step-list">
-        <ul>
-          <li class="step"><span>1</span> Choose the subscription plan that best fits your needs and sign up today</li>
-          <li class="step"><span>2</span> Order your delicious meal using our mobile app or website. Or you can even call us!</li>
-          <li class="step"><span>3</span> Enjoy your meal after less than 20 minutes. See you the next time!</li>
-        </ul>
+      <div class="container">
+        <div class="title">
+          <h2>How it works &mdash; simple as 1, 2, 3</h2>
+        </div>
+        <div class="boxes">
+          <div class="iphone-img">
+            <img src="img/app-iPhone.png" alt="Mobile app screenshot">
+          </div>
+          <div class="step-list">
+            <ul>
+              <li class="step"><span>1</span> Choose the subscription plan that best fits your needs and sign up today!</li>
+              <li class="step"><span>2</span> Order your delicious meal using our mobile app or website. Or you can even call us!</li>
+              <li class="step"><span>3</span> Enjoy your meal after less than 20 minutes. See you the next time!</li>
+            </ul>
+          </div>
+        </div>
       </div>
     </section>
 
     <section class="cities">
       <div class="title">
         <h2>We're currently in these cities</h2>
-
       </div>
       <div class="city">
 
