--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
       <div class="container">
         <div class="title">
           <h2>Get food fast &mdash; not fast food</h2>
-
         </div>
         <div class="service-description">
           <p>
@@ -47,7 +46,7 @@
             care of that, we're really good at it, we promise!
           </p>
         </div>
-        <div class="features">
+        <div class="boxes">
           <div class="feature-description">
             <i class="fa fa-calendar" aria-hidden="true"></i>
             <h3>Up to 365 days/year</h3>
@@ -68,7 +67,7 @@
           </div>
           <div class="feature-description">
             <i class="fa fa-cutlery" aria-hidden="true"></i>
-            <h3>100% organic</h3>
+            <h3>100% organic food</h3>
             <p>
               All our vegetables are fresh, organic and local. Animals are
               raised without added hormones or antibiotics. Good for your
@@ -77,7 +76,7 @@
           </div>
           <div class="feature-description">
             <i class="fa fa-cart-arrow-down" aria-hidden="true"></i>
-            <h3>Order anything</h3>
+            <h3>Order anything you want</h3>
             <p>
               We don't limit your creativity, which means you can order
               whatever you feel like. You can also choose from our menu
@@ -136,37 +135,47 @@
     </section>
 
     <section class="cities">
-      <div class="title">
-        <h2>We're currently in these cities</h2>
-      </div>
-      <div class="city">
+      <div class="container">
+        <div class="title">
+          <h2>We're currently in these cities</h2>
+        </div>
+        <div class="boxes">
+          <div class="city lisbon-city">
+            <div class="black-box">
+              <h3>Lisbon</h3>
+              <div class="city-description"><i class="fa fa-user" aria-hidden="true"></i> 1600+ happy eaters</div>
+              <div class="city-description"><i class="fa fa-star" aria-hidden="true"></i> 60+ top chefs</div>
+              <div class="city-description"><i class="fa fa-twitter" aria-hidden="true"></i><a href="#"> @omnifood_lx</a></div>
+            </div>
 
-        <h3>Lisbon</h3>
-        <div class="city-description"><i></i> 1600+ happy eaters</div>
-        <div class="city-description"><i></i> 60+ top chefs</div>
-        <div class="city-description"><i></i><a href="#"> @omnifood_lx</a></div>
+          </div>
+          <div class="city sf-city">
+            <div class="black-box">
+              <h3>San Francisco</h3>
+              <div class="city-description"><i class="fa fa-user" aria-hidden="true"></i> 3700+ happy eaters</div>
+              <div class="city-description"><i class="fa fa-star" aria-hidden="true"></i> 160+ top chefs</div>
+              <div class="city-description"><i class="fa fa-twitter" aria-hidden="true"></i><a href="#"> @omnifood_sf</a></div>
+            </div>
+          </div>
+          <div class="city berlin-city">
+            <div class="black-box">
+              <h3>Berlin</h3>
+              <div class="city-description"><i class="fa fa-user" aria-hidden="true"></i> 2300+ happy eaters</div>
+              <div class="city-description"><i class="fa fa-star" aria-hidden="true"></i> 110+ top chefs</div>
+              <div class="city-description"><i class="fa fa-twitter" aria-hidden="true"></i><a href="#"> @omnifood_berlin</a></div>
+            </div>
+          </div>
+          <div class="city london-city">
+            <div class="black-box">
+              <h3>London</h3>
+              <div class="city-description"><i class="fa fa-user" aria-hidden="true"></i> 1200+ happy eaters</div>
+              <div class="city-description"><i class="fa fa-star" aria-hidden="true"></i> 50+ top chefs</div>
+              <div class="city-description"><i class="fa fa-twitter" aria-hidden="true"></i><a href="#"> @omnifood_london</a></div>
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="city">
 
-        <h3>San Francisco</h3>
-        <div class="city-description"><i></i> 3700+ happy eaters</div>
-        <div class="city-description"><i></i> 160+ top chefs</div>
-        <div class="city-description"><i></i><a href="#"> @omnifood_sf</a></div>
-      </div>
-      <div class="city">
-
-        <h3>Berlin</h3>
-        <div class="city-description"><i></i> 2300+ happy eaters</div>
-        <div class="city-description"><i></i> 110+ top chefs</div>
-        <div class="city-description"><i></i><a href="#"> @omnifood_berlin</a></div>
-      </div>
-      <div class="city">
-
-        <h3>London</h3>
-        <div class="city-description"><i></i> 1200+ happy eaters</div>
-        <div class="city-description"><i></i> 50+ top chefs</div>
-        <div class="city-description"><i></i><a href="#"> @omnifood_london</a></div>
-      </div>
     </section>
 
     <section class="testimonials">
