Create style for 'Subscription' section

--- a/index.html
+++ b/index.html
@@ -221,45 +221,48 @@
       </div>
     </section>
 
-    <section class="">
-      <div class="title">
-        <h2>Start eating healthy today</h2>
-
-      </div>
-      <div class="price-plan">
-        <h3>Premium</h3>
-        <p>399$ <span>/month</span></p>
-        <p>That's only 13.30$ per meal</p>
-        <div class="price-description">
-          <div><i></i> 1 meal every day</div>
-          <div><i></i> Order 24/7</div>
-          <div><i></i> Access to newest creations</div>
-          <div><i></i> Free delivery</div>
-          <button type="button" name="button">Sign up</button>
+    <section class="subscription">
+      <div class="container">
+        <div class="title">
+          <h2>Start eating healthy today</h2>
         </div>
-      </div>
-      <div class="price-plan">
-        <h3>Pro</h3>
-        <p>149$ <span>/month</span></p>
-        <p>That's only 14.90$ per meal</p>
-        <div class="price-description">
-          <div><i></i> 1 meal 10 days/month</div>
-          <div><i></i> Order 24/7</div>
-          <div><i></i> Access to newest creations</div>
-          <div><i></i> Free delivery</div>
-          <button type="button" name="button">Sign up</button>
-        </div>
-      </div>
-      <div class="price-plan">
-        <h3>Starter</h3>
-        <p>19$ <span>/meal</span></p>
-        <p></p>
-        <div class="price-description">
-          <div><i></i> 1 meal</div>
-          <div><i></i> Order from 8 am to 12 pm</div>
-          <div><i></i> </div>
-          <div><i></i> Free delivery</div>
-          <button type="button" name="button">Sign up</button>
+        <div class="boxes">
+          <div class="price-plan">
+            <h3>Premium</h3>
+            <p class="price">399$ <span>/month</span></p>
+            <p>That's only 13.30$ per meal</p>
+            <div class="price-description">
+              <div><i class="fa fa-check" aria-hidden="true"></i> 1 meal every day</div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Order 24/7</div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Access to newest creations</div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Free delivery</div>
+            </div>
+            <button class="btn btn-full" type="button" name="button">Sign up</button>
+          </div>
+          <div class="price-plan">
+            <h3>Pro</h3>
+            <p class="price">149$ <span>/month</span></p>
+            <p>That's only 14.90$ per meal</p>
+            <div class="price-description">
+              <div><i class="fa fa-check" aria-hidden="true"></i> 1 meal 10 days/month</div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Order 24/7</div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Access to newest creations</div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Free delivery</div>
+            </div>
+            <button class="btn" type="button" name="button">Sign up</button>
+          </div>
+          <div class="price-plan">
+            <h3>Starter</h3>
+            <p class="price">19$ <span>/meal</span></p>
+            <p>&nbsp;</p>
+            <div class="price-description">
+              <div><i class="fa fa-check" aria-hidden="true"></i> 1 meal</div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Order from 8 am to 12 pm</div>
+              <div><i class="fa fa-times" aria-hidden="true"></i> </div>
+              <div><i class="fa fa-check" aria-hidden="true"></i> Free delivery</div>
+            </div>
+            <button class="btn" type="button" name="button">Sign up</button>
+          </div>
         </div>
       </div>
     </section>
