Create style for footer

--- a/index.html
+++ b/index.html
@@ -293,22 +293,24 @@
     <footer class="main-footer">
       <div class="footer-nav">
         <ul>
-          <li><a href="#"></a>About us</li>
-          <li><a href="#"></a>Blog</li>
-          <li><a href="#"></a>Press</li>
-          <li><a href="#"></a>iOS App</li>
-          <li><a href="#"></a>Android App</li>
+          <li><a href="#">About us</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">iOS App</a></li>
+          <li><a href="#">Android App</a></li>
         </ul>
       </div>
       <div class="social-media">
         <ul>
-          <li><a href="#"><i></i></a></li>
-          <li><a href="#"><i></i></a></li>
-          <li><a href="#"><i></i></a></li>
-          <li><a href="#"><i></i></a></li>
+          <li><a href="#"><i class="fa fa-facebook-square" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-twitter-square" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-google-plus-square" aria-hidden="true"></i></a></li>
+          <li><a href="#"><i class="fa fa-instagram" aria-hidden="true"></i></a></li>
         </ul>
       </div>
-      <p>Copyright © 2015 by Omnifood. All rights reserved</p>
+      <div class="copyright">
+        <p>Copyright © 2017 by Omnifood. All rights reserved</p>
+      </div>
     </footer>
 
     <script src="js/script.js"></script>
