Add mobile app buttons

--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
               <li class="step"><span>2</span> Order your delicious meal using our mobile app or website. Or you can even call us!</li>
               <li class="step"><span>3</span> Enjoy your meal after less than 20 minutes. See you the next time!</li>
             </ul>
+            <a class="mobile-app" href="#"><img src="img/app-store.png" alt="iPhone App"></a>
+            <a class="mobile-app" href="#"><img src="img/play-store.png" alt="Android App"></a>
           </div>
         </div>
       </div>
