--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
           <div class="logo">
             <img src="img/logo-white.png" alt="Omnifood logo">
           </div>
+          <div class="menu-icon">
+            <span></span>
+            <span></span>
+            <span></span>
+            <span></span>
+          </div>
           <ul class="menu">
             <li class="menu-item"><a href="#">Food delivery</a></li>
             <li class="menu-item"><a href="#">How it works</a></li>
@@ -316,7 +322,12 @@
         <p>Copyright © 2017 by Omnifood. All rights reserved</p>
       </div>
     </footer>
-
+    
+    <script
+      src="https://code.jquery.com/jquery-3.2.1.min.js"
+      integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+      crossorigin="anonymous">
+    </script>
     <script src="js/script.js"></script>
   </body>
 </html>
