--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
             <span></span>
           </div>
           <ul class="menu">
-            <li class="menu-item"><a href="#">Food delivery</a></li>
-            <li class="menu-item"><a href="#">How it works</a></li>
-            <li class="menu-item"><a href="#">Our cities</a></li>
-            <li class="menu-item"><a href="#">Sign up</a></li>
+            <li class="menu-item"><a href="#about">Food delivery</a></li>
+            <li class="menu-item"><a href="#how-to">How it works</a></li>
+            <li class="menu-item"><a href="#cities">Our cities</a></li>
+            <li class="menu-item"><a href="#sign-up">Sign up</a></li>
           </ul>
         </nav>
 
@@ -42,7 +42,7 @@
       </div>
     </header>
 
-    <section class="about">
+    <section class="about" id="about">
       <div class="container">
         <div class="title">
           <h2>Get food fast &mdash; not fast food</h2>
@@ -122,7 +122,7 @@
       </figure>
     </div>
 
-    <section class="steps">
+    <section class="steps" id="how-to">
       <div class="container">
         <div class="title">
           <h2>How it works &mdash; simple as 1, 2, 3</h2>
@@ -144,7 +144,7 @@
       </div>
     </section>
 
-    <section class="cities">
+    <section class="cities" id="cities">
       <div class="container">
         <div class="title">
           <h2>We're currently in these cities</h2>
@@ -231,7 +231,7 @@
       </div>
     </section>
 
-    <section class="subscription">
+    <section class="subscription" id="sign-up">
       <div class="container">
         <div class="title">
           <h2>Start eating healthy today</h2>
