--- a/index.html
+++ b/index.html
@@ -331,6 +331,7 @@
       integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
       crossorigin="anonymous">
     </script>
+    <script src="js/jquery.waypoints.min.js"></script>
     <script src="js/script.js"></script>
   </body>
 </html>
