--- a/index.html
+++ b/index.html
@@ -16,15 +16,13 @@
     <header class="header">
       <div class="container">
         <nav class="main-navigation">
-          <div class="logo">
-            <img src="img/logo-white.png" alt="Omnifood logo">
-          </div>
-          <div class="menu-icon">
+          <img class="logo" src="img/logo-white.png" alt="Omnifood logo">
+          <!-- <div class="menu-icon">
             <span></span>
             <span></span>
             <span></span>
-            <span></span>
-          </div>
+            <span></span> -->
+          <!-- </div> -->
           <ul class="menu">
             <li class="menu-item"><a href="#about">Food delivery</a></li>
             <li class="menu-item"><a href="#how-to">How it works</a></li>
@@ -157,7 +155,6 @@
               <div class="city-description"><i class="fa fa-star" aria-hidden="true"></i> 60+ top chefs</div>
               <div class="city-description"><i class="fa fa-twitter" aria-hidden="true"></i><a href="#"> @omnifood_lx</a></div>
             </div>
-
           </div>
           <div class="city sf-city">
             <div class="black-box">
@@ -185,7 +182,6 @@
           </div>
         </div>
       </div>
-
     </section>
 
     <section class="testimonials">
