Add 'fixed-nav' class for 960px+ devices

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header">
       <div class="container">
-        <nav class="main-navigation">
+        <nav class="main-navigation fixed-nav">
           <img class="logo" src="img/logo-white.png" alt="Omnifood logo">
           <!-- <div class="menu-icon">
             <span></span>
