Add header buttons scroll

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
         <div class="heading">
           <h1>Goodbuy junk food!<br>
             <span>Hello super healthy meals!</span></h1>
-          <button class="btn btn-full" type="button" name="button">I'm hungry</button>
-          <button class="btn btn-ghost" type="button" name="button">Show me more</button>
+          <button class="btn btn-full" id="watch-price" type="button" name="button">I'm hungry</button>
+          <button class="btn btn-ghost" id="watch-about" type="button" name="button">Show me more</button>
         </div>
       </div>
     </header>
