Fix style for fixed nav

--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <div><i class="fa fa-check" aria-hidden="true"></i> Access to newest creations</div>
               <div><i class="fa fa-check" aria-hidden="true"></i> Free delivery</div>
             </div>
-            <button class="btn btn-full" type="button" name="button">Sign up</button>
+            <button class="btn btn-full sign-up-btn" type="button" name="button">Sign up</button>
           </div>
           <div class="price-plan">
             <h3>Pro</h3>
