Make responsive navigation

--- a/index.html
+++ b/index.html
@@ -17,18 +17,13 @@
       <div class="container">
         <nav class="main-navigation">
           <img class="logo" src="img/logo-white.png" alt="Omnifood logo">
-          <!-- <div class="menu-icon">
-            <span></span>
-            <span></span>
-            <span></span>
-            <span></span> -->
-          <!-- </div> -->
           <ul class="menu">
             <li class="menu-item"><a href="#about">Food delivery</a></li>
             <li class="menu-item"><a href="#how-to">How it works</a></li>
             <li class="menu-item"><a href="#cities">Our cities</a></li>
             <li class="menu-item"><a href="#sign-up">Sign up</a></li>
           </ul>
+          <a class="menu-icon"><i class="fa fa-bars" aria-hidden="true"></i></a>
         </nav>
 
         <div class="heading">
