Fix HTML to get validation

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     to bring affordable and healthy meals to as many people as possible.">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/animate.css">
-    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100|Lato:300,300i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:100%7CLato:300,300i" rel="stylesheet">
     <link rel="stylesheet" href="css/font-awesome.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Omnifood</title>
@@ -276,7 +276,7 @@
         <form class="" action="index.html" method="post">
           <input type="text" name="name" value="" placeholder="Your name" required>
           <input type="email" name="email" value="" placeholder="Your email" required>
-          <select class="" name="">
+          <select name="find">
             <option value="">How did you find us?</option>
             <option value="friends">Friends</option>
             <option value="search">Search engine</option>
